styles/index.css
/**********************************************************/
/*                     Minimal Reset                      */
/**********************************************************/
/* makes sizing simpler */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* remove default spacing */
/* force styling of type through styling, rather than elements */

* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* dark mode user-agent-styles */

/*html {
  color-scheme: light dark;
}*/

/* min body height */

body {
  min-height: 100vh;
}

/* responsive images/videos */
img,
picture,
svg,
video {
  display: block;
  max-width: 100%;
}

/**********************************************************/
/*                     Variables                          */
/**********************************************************/

:root {
  /* Background Colors*/
  /* --body-bg-clr: #a100004d;
  --summary-bg-clr: light-dark(#ebebeb, #6c6c6c);
  --content-bg-clr: light-dark(#fcfcfc, #262626); */

  /* Heading */
  /* --h-main-clr: light-dark(#a10000, #e12929);
  --h-main-size: 2rem;
  --h-main-bold: bold;

  --h-clr: light-dark(black, white);
  --h-size: var(--h-main-size);
  --h-bold: var(--h-main-bold);

  --summary-margin-top: 2rem;
  --summary-padding: 1.1rem 1rem; */

  /* Font Family*/
  /* --ff-main: "DM Sans", sans-serif;
  --ff: var(--ff-main); */

  /* Top Banner */
  /* --top-banner-height: 30rem; */

  /* Body */
  /* --content-margin: 2rem 1rem 1rem 1rem;
  --content-border-radius: 0 0 1ch 1ch;
  --content-padding: 0rem 5rem 5rem 5rem;
  --content-max-width: 60rem; */

  /* Page Footer*/
  /* --example-imgs-grid-gap: 1rem; */

  /* Collections */
  /* --line-height: 2rem;
  --line-margin: 0 2rem; */

  /* Text */
  /* --text-margin: 5rem 1.5rem; */

  /* Example Images*/
  /* --example-img-height: 20rem;
  --example-img-width: 55rem;
  --example-img-margin-bottom: 0.2rem;
  --example-img-padding-top: 1rem; */

  /* Font Family */
  --ff-default: "DM Sans", sans-serif;
  --ff-heading: var(--ff-default);

  /* Font Weights */
  --fw-bold: bold;
  --fw-bolder: bolder;

  /* Font Sizes */
  --fs-heading: 3rem;
  --fs-subheading: 2rem;

  /* Text Line Heights */
  --lh-heading: 2.2rem;
  --lh-default: 1.6rem;

  /* Spacing */
  --spacing-xs: 0.25rem;
  --spacing-sm: 0.5rem;
  --spacing-md: 1rem;
  --spacing-lg: 1.5rem;
  --spacing-xl: 2rem;

  /* Border Round */
  --border-radius-xs: 0.25rem;
  --border-radius-sm: 0.5rem;
  --border-radius-md: 1rem;
  --border-radius-lg: 1.5rem;
  --border-radius-xl: 2rem;

  /* General Units */
  --gu-full: 100%;

  /* Background Colors */
  --clr-bg-page: yellow;
  --clr-bg-content: white;
  --clr-bg-summary: gray;

  /* Colors */
  --clr-f-heading: red;

  /* Page */
  --page-padding: 0 calc(100rem - var(--content-width));

  /* Content */
  --content-width: 75rem;
  --content-max-width: 75rem;
  --content-padding: 0 1rem;
  --content-preview-height: 15rem;

  --content-summary-indent: 1rem;
  --content-summary-spacing: 1rem;

  --content-examples-clt-gap: 0.5rem;
  --content-examples-clt-height: 20rem;

  /* Lists */
  --ls-indentation: 1rem;
}

/**********************************************************/
/*                     Global Settings                    */
/**********************************************************/
* {
  font-family: var(--ff-default);
  line-height: var(--lh-default);
}

h1,
h2,
h3 {
  font-family: var(--ff-heading);
  font-weight: var(--fw-bolder);
  font-size: var(--fs-subheading);

  line-height: var(--lh-heading);
  padding-bottom: var(--spacing-sm);
}

h1 {
  font-size: var(--fs-heading);
}

strong {
  font-weight: var(--fw-bold);
}

body {
  display: flex;
  justify-content: center;
  align-items: center;

  padding: var(--page-padding);

  background-color: var(--clr-bg-page);
}

ol[role="list"],
ul[role="list"] {
  line-height: var(--lh-default);
  padding-inline-start: var(--ls-indentation);
}
/**********************************************************/
/*                     Blocks                             */
/**********************************************************/

.page {
  max-width: var(--content-max-width);
  background-color: var(--clr-bg-content);
  margin-bottom: var(--spacing-md);
}

.page > *:not(.page-banner) {
  padding: var(--content-padding);
}

.page-banner {
  height: var(--content-preview-height);

  img {
    object-fit: cover;
    width: var(--gu-full);
    height: var(--content-preview-height);
  }
}

.page-header__heading {
  margin-top: var(--spacing-lg);
  color: var(--clr-f-heading);
}

.page-header__summary {
  background-color: var(--clr-bg-summary);

  padding-block-start: var(--content-summary-spacing);
  padding-block-end: var(--content-summary-spacing);
  padding-inline-start: var(--content-summary-indent);

  margin: var(--spacing-lg) auto;

  border-radius: var(--border-radius-xs);
}

.page-section {
  padding-bottom: var(--spacing-md);
}

.page-section__heading {
  padding-bottom: var(--spacing-xs);
}

.page-section--examples {
  margin-bottom: var(--spacing-md);
}

.page-section__collection {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: var(--content-examples-clt-gap);

  img {
    object-fit: cover;
    width: 100%;
    height: var(--content-examples-clt-height);
  }
}

/**********************************************************/
/*                     Media Query                        */
/**********************************************************/

@media screen and (max-width: 440px) {
  body {
    display: contents;
    margin: 0;
    padding: 0;
  }

  .top-banner img {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    margin: 0;
    padding: 0;
  }

  .wrapper {
    border-radius: 0;
    margin: 0;
    padding: 0;
  }

  .page-footer .examples {
    grid-template-columns: 1fr;
    gap: 1rem;
    padding: 1rem 1rem 1rem 0rem;
  }
}

